mockers_derive/tests/compile-fail/derive_unknown_trait.rs
use mockers_derive::mocked;

#[mocked(derive(Foo))]
trait A {}

fn main() {}
