mockers_derive/tests/compile-fail/derive_unknown_trait.stderr
error: Parsing error: don't know how to derive this trait, supported traits are: Copy
 --> $DIR/derive_unknown_trait.rs:3:17
  |
3 | #[mocked(derive(Foo))]
  |                 ^^^
